# CSSE4011-Athena-Aqua

./: README.md  dashboard.py
Base_Node/: CMakeLists.txt  prj.conf  sample.yaml
Base_Node/boards/: m5stack_core2_procpu.overlay
Base_Node/include/: gatt_client.h  sub_settings.h
Base_Node/src/: gatt_client.c  main.c  sub_settings.c
Dashboard_GUI/: blockchain.py  template_ui.py
Sensor_Node/: CMakeLists.txt  prj.conf  sample.yaml
Sensor_Node/boards/: nrf52840dk_nrf52840.overlay
Sensor_Node/include/: my_gatt.h  servo.h  ultrasonic.h
Sensor_Node/src/: main.c  my_gatt.c  servo.c  ultrasonic.c
cam_streaming/: CMakeLists.txt  makefile  partitions_singleapp.csv  sdkconfig  sdkconfig.deafults  sdkconfig.old
cam_streaming/main/: CMakeLists.txt  idf_component.yml  main.c
video_infer/: CMakeLists.txt  YoloV8rt  common.hpp  main.cpp
video_infer/ble_code/: ble_code.py  ble_test.py  client_test.cpp  test
